# alluvium

./: .gitignore  COPYRIGHT  README.md  marble-protect.md  proto.md  pyproject.toml
.github/workflows/: test.yml
alluvium/: __init__.py  client.py  progress.py  sim.py  xbit.py
alluvium/test/: conftest.py  test_cli.py  test_sim.py  test_xbit.py
